syntax = "proto3";

package media;

service MediaService {
  rpc GetMedia(GetMediaRequest) returns (Media) {}
  rpc GetManyMedia(GetManyMediaRequest) returns (MediaList) {}
}

message GetMediaRequest {
  string id = 1;
}

message GetManyMediaRequest {
  repeated string ids = 1;
}

message Media {
  string id = 1;
  string name = 2;
  string url = 3;
  int64 size = 4;
  string extension = 5;
  string createdAt = 6;
  string updatedAt = 7;
}

message MediaList {
  repeated Media payload = 1;
}